# IP-ZAMMAD-MCPServer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.coolify.yml  docker-compose.development.yml  docker-compose.traefik.yml
.github/: dependabot.yml
.github/config/docker-base-image-monitor/: base-images.json
.github/config/release/: semantic-release.json
.github/workflows/: docker-maintenance.yml  docker-release.yml
app/bg-zammad-mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
app/bg-zammad-mcp/src/: __init__.py  config.py  logging_setup.py  main.py  rate_limit.py  server.py
app/bg-zammad-mcp/src/auth/: __init__.py  client_storage.py  generic_oidc.py  provider_factory.py  role_middleware.py  upstream_token.py  zammad_oauth.py
app/bg-zammad-mcp/src/profiles/: zammad.json
app/bg-zammad-mcp/src/static/: index.html
app/bg-zammad-mcp/src/zammad/: __init__.py  client.py  errors.py  version_probe.py
app/bg-zammad-mcp/src/zammad/tools/: __init__.py  articles.py  groups.py  notifications.py  organizations.py  reference.py  tags.py  tickets.py  users.py
app/bg-zammad-mcp/tests/: __init__.py  conftest.py  test_config.py  test_provider_factory.py  test_rate_limit.py  test_role_middleware.py  test_upstream_token.py  test_version_probe.py  test_zammad_client.py  test_zammad_errors.py  test_zammad_oauth.py
docs/: ZAMMAD-MCP-SPEC.md  authentication.md  client-setup.md  installation.md  role-based-access.md  testing.md  troubleshooting.md
scripts/: dev-inspector.py  generate-env.py
