[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bg-zammad-mcp"
version = "0.1.3"
description = "BAUER GROUP Zammad MCP Server — OAuth2-gated remote MCP bridge for self-hosted Zammad (v6.x / v7.x)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "BAUER GROUP", email = "info@bauer-group.com" },
    { name = "Karl Bauer", email = "karl.bauer@bauer-group.com" },
]
requires-python = ">=3.13"
keywords = ["mcp", "zammad", "oauth", "fastmcp", "helpdesk", "ticketing", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Groupware",
]
dependencies = [
    # Shared BAUER GROUP MCP framework — settings base, inbound auth, encrypted
    # OAuth-state storage, logging, rate limiting, routes, the outbound client +
    # the profile/CLI surface. Pulled from GitHub (internal projects do not use
    # PyPI for this package), pinned to a release tag for reproducibility. The
    # [redis] extra adds the RedisStore backend for the OAuth-state store.
    # bg-mcpcore transitively provides fastmcp / pydantic / pydantic-settings /
    # structlog / rich / cryptography / typer / py-key-value-aio[disk].
    "bg-mcpcore[redis] @ git+https://github.com/bauer-group/LIB-BG-MCPCore.git@v1.2.1",

    # Directly imported by this server's own code (kept explicit; also provided
    # transitively by bg-mcpcore, so the version ranges stay compatible):
    "fastmcp>=3.0.0,<4.0.0",        # OAuthProxy, middleware, dependencies, mcp.types
    "httpx>=0.28.1,<1.0.0",         # the Zammad OAuth2 userinfo verifier
    "pydantic>=2.10.0,<3.0.0",      # Settings fields
    "pydantic-settings>=2.14.1,<3.0.0",  # NoDecode on the role CSV field
    "structlog>=24.4.0,<26.0.0",    # structured logging in tools / auth / server

    # Optional error tracking — loaded lazily by bg-mcpcore, controlled by SENTRY_DSN.
    "sentry-sdk>=2.18.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0,<10.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
    "pytest-httpx>=0.35.0,<1.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "respx>=0.22.0,<1.0.0",
]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/bauer-group/IP-ZAMMAD-MCPServer"
Source = "https://github.com/bauer-group/IP-ZAMMAD-MCPServer"
Issues = "https://github.com/bauer-group/IP-ZAMMAD-MCPServer/issues"

[project.scripts]
bg-zammad-mcp = "main:app"

# ── bg-mcpcore plugin seams ──────────────────────────────────────────────────
# The custom Zammad OAuth2 inbound provider and the role-allowlist gate are
# discovered config-driven by bg-mcpcore (keyed on AUTH_MODE=zammad), so no
# wiring code is needed in this server's entrypoint.
[project.entry-points."bg_mcpcore.auth_providers"]
zammad = "auth.zammad_oauth:build_zammad_oauth_provider"

[project.entry-points."bg_mcpcore.auth_middleware"]
zammad = "auth.role_middleware:build_role_middleware"

# ── Hatch build configuration ──────────────────────────────────────────────
# bg-mcpcore is pulled via a direct git reference (GitHub, not PyPI); hatchling
# requires this opt-in to allow a PEP 508 direct URL in project.dependencies.
[tool.hatch.metadata]
allow-direct-references = true

# We ship a top-level package laid out under src/ - this points the wheel at it.
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# ── Tooling ────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic._internal.*",
    "ignore::DeprecationWarning:starlette.*",
]
markers = [
    "integration: marks tests that hit external services (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
